# tamil-char-utils-lib

./: Cargo.toml
src/: lib.rs
