[package]
name = "tamil-char-utils-lib"
version = "0.1.0"
authors = ["SWAMINATHAN Gurukandhamoorthi <ds.gurukandhamoorthi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tamilcharutils"
crate-type = ["cdylib"]

[dependencies]
unicode-segmentation = "1.6.0"
strsim = "0.10.0"

[dependencies.cpython]
version = "0.5.0"
features = ["extension-module"]
