[package]
name = "tamil-char-utils-lib"
version = "0.1.0"
authors = ["SWAMINATHAN Gurukandhamoorthi <ds.gurukandhamoorthi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tamilcharutils"
crate-type = ["cdylib"]

[dependencies]
unicode-segmentation = "1.7.1"
strsim = "0.10.0"
regex = "1.5.4"
once_cell = "1.8.0"

[dependencies.cpython]
version = "0.7"
features = ["extension-module"]
